--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,11 +53,16 @@
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
             <p class="ticket-header">BUY TICKET</p>
-            <form action="">
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed
-              </p>
-              <label for="select">6 or more people</label>
+            <p class="dropdown-text">
+              Please Choose the Desired Number of Tickets and Click Proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <p class="dropdown-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p>
+            <form action="" class="ticket">
+              <label for="select">Tickets</label>
               <select name="tickets" id="select">
                 <option value="1">1</option>
                 <option value="1">2</option>
@@ -116,44 +121,56 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box"
+              >EXHIBITIONS</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
 
-          <!-- <ul class="dropdown">
-            <p>Our Exhibition Spaces Include:</p>
-            <li>Cosmology</li>
-            <li>Evolution</li>
-            <li>Biology & Medicine</li>
-            <li>Robotics & AI</li>
-            <li>Ecology</li>
-          </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
-            <p>Learn more about what have on offer, wheter you are a:</p>
-            <li>Kid</li>
-            <li>Parent</li>
-            <li>Teacher</li>
-            <li>Researcher</li>
-          </ul> -->
           <li>
-            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="explore.html" class="purple-box inactive">EXPLORE</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
-          <!-- <ul class="dropdown">
-            <p>Do you want to support the museum?:</p>
-            <li>Donations</li>
-            <li>Volunteering</li>
-            <li>Internships</li>
-          </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
-            <p>Information about:</p>
-            <li>Admission</li>
-            <li>Location</li>
-            <li>Hours</li>
-            <li>Accessibility</li>
-            <li>Food and Drink</li>
-            <li>Shop</li>
-          </ul> -->
+
+          <li>
+            <a href="get_involved.html" class="purple-box inactive" 
+              >GET INVOLVED</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
+
+          <li>
+            <a href="visit.html" class="purple-box inactive">VISIT</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
@@ -165,9 +182,10 @@
           Our Exhibits are Divided Into 5 Spaces
           </h1>
         <section class="main-content">
-          <div class="item">
-          <div class="card cosmology">
-            <h2 id="cosmology">COSMOLOGY</h2>            
+          <div class="card-wrapper">
+          <div class="card">
+            <h2 id="cosmology">COSMOLOGY</h2>  
+            <div class="cosmology background">         
               <p>
                 Explore the wonders of our cosmos. Our fantastic exhibition,
                 ‘The Sky Above Us’, explores the night sky and what we can see
@@ -180,16 +198,21 @@
                 traders, to Galileo’s telescope, to the latest exploration of
                 the planets in our solar system.
               </p>
+            </div> 
           </div>
           <span class="fa fa-arrow-circle-right purple"></span>
           <span class="fa fa-arrow-circle-down purple"></span>
           <figure class="card">
             <img src="images\cosmology.jpg" alt="" />
           </figure>
+          <figure class="card-large">
+            <img src="images\cosmology_large.jpg" alt="" />
+          </figure>
         </div>
-        <div class="item">
-          <div class="card evolution">
-            <h2 id="evolution">EVOLUTION</h2>         
+        <div class="card-wrapper">
+          <div class="card reverse">
+            <h2 id="evolution">EVOLUTION</h2>   
+            <div class="evolution background">        
               <p>
                 For centuries, philosophers and scientists have wrestled with
                 the question of our origins. Where do we come from and how did
@@ -203,16 +226,21 @@
                 to meet a few of the creatures who didn’t survive, including our
                 Woolly Mammoth, the Dodos, and a number of dinosaurs too.
               </p>
+              </div>
           </div>
-          <span class="fa fa-arrow-circle-left blue"></span>
+          <span class="fa fa-arrow-circle-left blue reverse"></span>
           <span class="fa fa-arrow-circle-down blue"></span>
           <figure class="card">
             <img src="images\evolution.jpg" alt="" />
           </figure>
+          <figure class="card-large reverse">
+            <img src="images\evolution_large.jpg" alt="" />
+          </figure>
         </div>
-          <div class="item">
-          <div class="card biology">
+          <div class="card-wrapper">
+          <div class="card">
             <h2 id="biology">BIOLOGY & MEDICINE</h2>
+            <div class="biology background">  
               <p>
                 From micro-organisms to the human body, major breakthroughs in
                 biology are offering us unique insights into the great wonders
@@ -226,14 +254,19 @@
                 breakthroughs including the discovery of penicillin and the
                 first heart transplant.
               </p> 
+              </div>
           </div>
           <span class="fa fa-arrow-circle-right dark-green"></span>
           <span class="fa fa-arrow-circle-down dark-green"></span>
           <figure class="card"><img src="images\biology.jpg" alt="" /></figure>
+          <figure class="card-large">
+            <img src="images\biology_large.jpg" alt="" />
+          </figure>
         </div>
-          <div class="item">
-          <div class="card robotics">
+          <div class="card-wrapper">
+          <div class="card reverse">
             <h2 id="robotics">ROBOTICS & AI</h2>
+            <div class="robotics background">  
               <p>
                 The information revolution is here and robotics and artificial
                 intelligence are the science of the future.
@@ -243,26 +276,33 @@
                 robotics, the future is here. You can even say hello and shake
                 the hand of Rob the Robot.
               </p>
+              </div>
           </div>
-          <span class="fa fa-arrow-circle-left orange"></span>
+          <span class="fa fa-arrow-circle-left orange reverse"></span>
           <span class="fa fa-arrow-circle-down orange"></span>
           <figure class="card"><img src="images\robotics.jpg" alt="" /></figure>
+          <figure class="card-large reverse">
+            <img src="images\robotics_large.jpg" alt="" />
+          </figure>
         </div>
-          <div class="item">
-          <div class="card ecology">
+          <div class="card-wrapper">
+          <div class="card">
             <h2 id="ecology">ECOLOGY</h2>
-            
+            <div class="ecology background">  
               <p>
                 As we learn more and more of the impact humans are having on the
                 planet, the more important it becomes that scientists explore
                 how to create a sustainable future not just for humans but for
                 the whole planet.
               </p>
-            
+              </div>
           </div>
           <span class="fa fa-arrow-circle-right magenta"></span>
           <span class="fa fa-arrow-circle-down magenta"></span>
           <figure class="card"><img src="images\ecology.jpg" alt="" /></figure>
+          <figure class="card-large">
+            <img src="images\ecology_large.jpg" alt="" />
+          </figure>
         </div>
         </section>
         <section class="photo-gallery">
@@ -275,104 +315,104 @@
           <div><img src="../images/gallery-5.jpg" alt="" /></div>
           <div><img src="../images/gallery-6.jpg" alt="" /></div>
         </div>
-        <p class="visit">"More Than 1000 Exhibits to Explore"</p>
+        <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
         </section>
 
         <div class="newsletter-wrapper">
-        <div class="blur">
-          <section class="newsletter">
-            <p>
-              Sign up to our Newsletter and be the first to know about Our
-              exciting New stuff:
-            </p>
-            <form action="form-success.php" method="get" class="newsletter">
-              <input
-                id="newsletter"
-                type="text"
-                name="email"
-                placeholder="YOUR EMAIL"
-              />
-              <input
-                id="sign-up"
-                type="submit"
-                name="subscribe"
-                value="SIGN UP"
-              />
-            </form>
-          </section>
+          <div class="blur">
+            <section class="newsletter">
+              <p>
+                Sign up to our Newsletter and be the first to know about Our
+                exciting New stuff:
+              </p>
+              <form action="form-success.php" method="get" class="newsletter">
+                <input
+                  id="newsletter"
+                  type="text"
+                  name="email"
+                  placeholder="YOUR EMAIL"
+                />
+                <input
+                  id="sign-up"
+                  type="submit"
+                  name="subscribe"
+                  value="SIGN UP"
+                />
+              </form>
+            </section>
+          </div>
         </div>
-      </div>
-    </main>
-
-    <footer>
-      <div class="footer-wrapper">
-        <div class="footer-container">
-          <h6>CONNECT:</h6>
-          <ul class="connect">
-            <li>
-              <a href="www.facebook.com"
-                ><span class="fa fa-facebook-f"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.instagram.com"
-                ><span class="fa fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-            </li>
-            <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-container">
-          <h6>HOURS:</h6>
-          <div class="hours-wrapper">
-            <ul class="hours">
-              <li>Monday:</li>
-              <li>Tuesday:</li>
-              <li>Wednesday:</li>
-              <li>Thursday:</li>
-              <li>Friday:</li>
-              <li>Saturday:</li>
-              <li>Sunday:</li>
+      </main>
+  
+      <footer>
+        <div class="footer-wrapper">
+          <div class="footer-container">
+            <h6>CONNECT:</h6>
+            <ul class="connect">
+              <li>
+                <a href="www.facebook.com"
+                  ><span class="fa fa-facebook-f"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.instagram.com"
+                  ><span class="fa fa-instagram"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              </li>
+              <li>
+                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              </li>
             </ul>
-            <ul>
-              <li>Closed</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 19:00</li>
-              <li>09:00 - 16:00</li>
-              <li>09:00 - 13:00</li>
+          </div>
+          <div class="footer-container">
+            <h6>HOURS:</h6>
+            <div class="hours-wrapper">
+              <ul class="hours">
+                <li>Monday:</li>
+                <li>Tuesday:</li>
+                <li>Wednesday:</li>
+                <li>Thursday:</li>
+                <li>Friday:</li>
+                <li>Saturday:</li>
+                <li>Sunday:</li>
+              </ul>
+              <ul>
+                <li>Closed</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 19:00</li>
+                <li>09:00 - 16:00</li>
+                <li>09:00 - 13:00</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-container">
+            <div>
+              <h6>LOCATION:</h6>
+              <p>Nygårdsgaten 112</p>
+              <p>5008 Bergen, Norway</p>
+            </div>
+            <a href="visit.html" class="location"
+              ><span class="fa fa-map-marker-alt"></span>
+              <p>Getting Here</p></a
+            >
+          </div>
+          <div class="footer-container">
+            <h6>CONTACT & SUPPORT:</h6>
+            <ul class="contact">
+              <li><a href="about_us.html">About Us</a></li>
+              <li><a href="visit.html">Facilities</a></li>
+              <li><a href="contact.html">Contact & FAQ</a></li>
+              <li><p>Email: contact@cms.com</p></li>
+              <li><p>Phone: 500 55 555</p></li>
             </ul>
           </div>
         </div>
-        <div class="footer-container">
-          <div>
-            <h6>LOCATION:</h6>
-            <p>Nygårdsgaten 112</p>
-            <p>5008 Bergen, Norway</p>
-          </div>
-          <a href="visit.html" class="location"
-            ><span class="fa fa-map-marker-alt"></span>
-            <p>Getting Here</p></a
-          >
-        </div>
-        <div class="footer-container">
-          <h6>CONTACT & SUPPORT:</h6>
-          <ul class="contact">
-            <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact & FAQ</a></li>
-            <li><p>Email: contact@cms.com</p></li>
-            <li><p>Phone: 500 55 555</p></li>
-          </ul>
-        </div>
-      </div>
-      <p id="copyright">Community Science Museum 2020</p>
-    </footer>
+        <p id="copyright">Community Science Museum 2020</p>
+      </footer>
   </body>
 </html>
